src/test/ui/parser/doc-before-extern-rbrace.stderr
error: expected item after doc comment
  --> $DIR/doc-before-extern-rbrace.rs:4:5
   |
LL |     /// hi
   |     ^^^^^^

error: aborting due to previous error

