src/test/ui/parser/doc-before-extern-rbrace.rs
fn main() {}

extern {
    /// hi
    //~^ ERROR found a documentation comment that doesn't document anything
}
